fix the bug no whitespace

--- a/src/app/views/app/home/home.component.scss
+++ b/src/app/views/app/home/home.component.scss
@@ -261,7 +261,6 @@ main {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5rem;
 
             .title {
               font-size: 1rem;
